--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="hero_btn mt-10">
                                 <a class="main-btn " href="https://traceability.siemppre.com/traceability.apk">Descargar APK</a>
                             </div>
-                            <h2 class="hero_title text-2xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-extrabold mt-8">Escaneanos av</h2>
+                            <h2 class="hero_title text-2xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-extrabold mt-8">Escaneanos</h2>
                             <img src="/assets/images/qrcode-generado.png" alt="">
                         </div> <!-- header hero content -->
                     </div>
