--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="grow  w-1/2">
                         <div class="pt-150 lg:pt-0 text-center">
                             <h2 class="hero_title text-2xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl font-extrabold">Descarga Traceability</h2>
-                            <p class="mt-8 lg:mr-8">qewqe</p>
+                            <p class="mt-8 lg:mr-8"></p>
                             <div class="hero_btn mt-10">
                                 <a class="main-btn " href="https://traceability.siemppre.com/traceability.apk">Descargar APK</a>
                             </div>
